--- a/css/invoice_preview.css
+++ b/css/invoice_preview.css
@@ -148,6 +148,7 @@
 .popup-card {
   display: none;
 }
+
 .popup-card {
   display: none;
   position: fixed;
@@ -174,7 +175,7 @@
   width: 100%;
 }
 
-.popup-card .btn + .btn {
+.popup-card .btn+.btn {
   margin-top: 12px;
 }
 
@@ -247,11 +248,20 @@ input[type="file"] {
 }
 
 .custom-file-upload {
-    border: 1px solid #ccc;
-    width: 100px;
-    height: 100px
-    
-    display: inline-block;
-    padding: 6px 12px;
-    cursor: pointer;
+  border: 1px solid #ccc;
+  background-color: #ccc;
+
+  width: 100px;
+  height: 100px;
+
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+#logo-preview {
+  display: none;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
